2007-07-27  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs : only generate Copy override for methods
	with no parameters.  Fixes a gnome-sharp build problem.

2007-07-26  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : beef up error message for signal vm parse.
	[Fixes #82149]

2007-07-24  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : bump version and tag 2.10.2. 

2007-07-20  Mike Kestner  <mkestner@novell.com>

	* gtk/Calendar.custom : workaround invalid states in widget when
	raising month_changed signals.  [Fixes #78524]

2007-07-20  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api-2.10.raw : refresh.
	* parser/gapi_pp.pl : combine lines that end in '\' before sending
	them through the pattern matching.  [Fixes #79214]

2007-07-19  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs : override the new Copy vm if a Copy method
	exists for the type.
	* glib/Opaque.cs : add a virtual method to allow subclasses with
	Copy methods to override.  Use the method in GetOpaque for unowned
	instantiations to try to obtain an owned instance. [Fixes #82037]
	
2007-07-18  Mike Kestner  <mkestner@novell.com>

	* gdk/EventExpose.cs : return a pointer from the get_area glue
	pinvoke to avoid VS crashes on win32.
	* gdk/glue/event.c : return a GdkRectangle* to avoid stack imbalance
	on VS debugger.  [Fixes #82098]

2007-07-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : map TreeModelFilter ctor param to prop to
	avoid subclass ctor exception. [Fixes #82115]

2007-07-17  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : make GError** signatures fatal to
	avoid compilation problem in gmime-sharp.

2007-07-12  Mike Kestner  <mkestner@novell.com>

	* generator/StructBase.cs : use typeof to pass type to PtrToStruct
	to avoid an instantiation and method call.  Duh.

2007-07-10  Mike Kestner  <mkestner@novell.com>

	* generator/ImportSignature.cs : use Parameter.NativeSignature 