@@ -1,3 +1,9 @@
+2007-07-30  Mike Kestner  <mkestner@novell.com>
+
+	* generator/MethodBody.cs : refactor finish logic into parameter.
+	* generator/Parameters.cs : refactor finish logic into parameter and
+	fix some failures to marshal ref params post call.
+
 2007-07-27  Mike Kestner  <mkestner@novell.com>
 
 	* generator/OpaqueGen.cs : only generate Copy override for methods
